# sensor_calib_tas

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
demo/: calibrate_mucar3.bag
extrinsic_sensor_calib/: CMakeLists.txt  package.xml
extrinsic_sensor_calib/cfg/: ExtrinsicSensorCalib.cfg
extrinsic_sensor_calib/config/: board_config.yaml  extrinsic_sensor_calib.perspective  extrinsic_sensor_calib.rviz  extrinsic_sensor_calib_itsc.rviz  extrinsic_sensor_calib_itsc_2.rviz  extrinsic_sensor_calib_tas.rviz
extrinsic_sensor_calib/include/: EigenDenseBaseAddons.h
extrinsic_sensor_calib/launch/: calibrate_crafter_1.launch  calibrate_mucar3.launch  calibrate_sts.launch  calibrate_tiguan.launch  calibrate_touareg.launch  camera_apriltag_detection.launch  demo.launch  empty.launch  lidar_hole_pattern_detection.launch  radar_doppler_simulator_detection.launch
extrinsic_sensor_calib/src/extrinsic_sensor_calib/: boost_serialization.hpp  cost_functors.hpp  sensor_calib.cpp  sensor_calib.h  sensor_calib_node.cpp  types.h
extrinsic_sensor_calib/src/extrinsic_sensor_calib/impl/: calibrate.cpp  helper.cpp  init.cpp  input.cpp  output.cpp
lidar_reference_point_detection/: CMakeLists.txt  package.xml
lidar_reference_point_detection/cfg/: HolePatternDetector.cfg
lidar_reference_point_detection/src/hole_pattern_detector/: cost_functors.hpp  hole_pattern_detector.cpp  hole_pattern_detector.h  hole_pattern_detector_node.cpp  pcl_point_type.h  types.h
radar_target_detection/: CMakeLists.txt  package.xml
radar_target_detection/cfg/: DopplerSimulator.cfg
radar_target_detection/src/doppler_simulator/: doppler_simulator.cpp  doppler_simulator.h  doppler_simulator_node.cpp
rqt_sensor_calib/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_sensor_calib/resource/: ExtrinsicSensorCalib.ui
rqt_sensor_calib/scripts/: rqt_sensor_calib
rqt_sensor_calib/src/rqt_sensor_calib/: sensor_calib_tas.py
sensor_calib_msgs/: CMakeLists.txt  package.xml
sensor_calib_msgs/msg/: CartesianPointMeasurement.msg  CartesianPointMeasurements.msg  DetectionStati.msg  DetectionStatus.msg  EstimatedPoses.msg  MeasurementIndex.msg  MeasurementIndices.msg  OptimizeSensorPose.msg  OptimizeSensorPoses.msg  PolarPointMeasurement.msg  PolarPointMeasurements.msg  Reset.msg  Residual.msg  ResidualGroup.msg  Residuals.msg  UseResidual.msg  UseResiduals.msg
