<?xml version="1.0"?>

<package format="2">
  <name>lidar_reference_point_detection</name>
  <version>0.0.1</version>
  <description>Hole pattern detection in lidar point clouds for extrinsic calibration.</description>

  <maintainer email="bianca.forkel@unibw.de">Bianca Forkel</maintainer>

  <license>BSD</license>

  <author email="bianca.forkel@unibw.de">Bianca Forkel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_calib_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
