<?xml version="1.0"?>

<package format="2">
  <name>rqt_sensor_calib</name>
  <version>0.0.1</version>
  <description>A package including an rqt plugin for sensor_calib_tas</description>

  <maintainer email="bianca.forkel@unibw.de">Bianca Forkel</maintainer>

  <license>BSD</license>

  <author email="bianca.forkel@unibw.de">Bianca Forkel</author>
  <author email="jan.kallwies@unibw.de">Jan Kallwies</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>sensor_calib_msgs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
